<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <include layout="@layout/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo"
                android:layout_centerHorizontal="true"/>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="20dp"
                android:layout_below="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentPadding="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="Login with your valid mobile number"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/greenshade3tp"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/user_id"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:background="@android:color/transparent"
                                android:drawablePadding="8dp"
                                android:gravity="center_vertical"
                                android:hint="@string/mobileNumber"
                                android:inputType="numberDecimal"
                                android:padding="10dp"
                                android:singleLine="true"
                                android:maxLength="10"/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/password"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:drawablePadding="8dp"
                                android:gravity="center_vertical"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:padding="10dp"
                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/loginBtn"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/button_bg"
                            android:padding="3dp"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            app:cornerRadius="0dp"
                            android:textStyle="bold" />


                    </LinearLayout>
                    <TextView
                        android:id="@+id/registerLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/login_layout"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/newUser" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>



        </RelativeLayout>


    </ScrollView>





</LinearLayout>
